@@ -1,24 +1,10 @@
 {
-  "timestamp" : "2022-05-24T01:13:24Z",
-  "count_outdated" : 87,
-  "uniques_outdated" : 54,
+  "timestamp" : "2022-05-26T01:12:27Z",
+  "count_outdated" : 96,
+  "uniques_outdated" : 61,
   "count" : 99,
   "uniques" : 64,
   "clones" : [
-    {
-      "timestamp": "2022-05-11T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-05-12T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 7 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 6 ]
-    },
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 1,
