@@ -1,17 +1,7 @@
 {
-  "count": 12,
-  "uniques": 9,
+  "count": 3,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2022-05-11T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2022-05-12T00:00:00Z",
-      "count": 7,
-      "uniques": 6
-    },
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 1,
