@@ -1,3 +1,10 @@
+2022-05-26T01:12:27Z:
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 54 87 / 64 99
+* notice: next accum: outdated-unq outdated-all / unq all: 61 96 / 64 99
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-24T01:13:24Z:
 * notice: last 14d: unq all: 9 12
 * notice: prev accum: outdated-unq outdated-all / unq all: 50 82 / 64 99
